index.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");

* {
  /* outline: red dashed 1px; */
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Noto Sans Mono", "Consolas", "SF Mono", monospace;
  /* outline: red dashed 1px; */
}

body {
  margin: 0;
  height: 100vh;
  display: grid;
  place-items: center;
}

.main-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* height: 100vh; */
  /* margin-top: 6rem; */
  gap: 1.5rem;
}

.main-container h2 {
  font-family: "Poppins", sans-serif;
  font-size: 3rem;
  font-weight: 500;
  letter-spacing: 32px;
  margin-right: -32px; /* add this line */
  transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  background: linear-gradient(to right, #ff7f7f, #ff0000);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.main-container p {
  font-size: 1.5rem;
  color: #808080;
}

